# xsoar-client

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: release.yml
src/xsoar_client/: __about__.py  __init__.py  artifact_provider.py  cases.py  config.py  constants.py  content.py  integrations.py  packs.py  rbac.py  xsoar_client.py
src/xsoar_client/artifact_providers/: __init__.py  azure.py  base.py  s3.py
tests/: xsoar_client_test.py
